--- a/index.html
+++ b/index.html
@@ -4,21 +4,54 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script defer src="face-api.min.js"></script>
-  <script defer src="script.js"></script>
+  <script defer src="public/face-api.min.js"></script>
+  <script defer src="public/script.js"></script>
   <title>Face Recognition</title>
   <style>
     body {
+      width: 100%;
+      height: 100%;
       margin: 0;
       padding: 0;
-      width: 100vw;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column
-    }
 
+    }
+    img,
+    table,
+    td,
+    blockquote,
+    code,
+    pre,
+    textarea,
+    input,
+    iframe,
+    object,
+    embed,
+    video {
+      max-width: 100%;
+    }
+    img {
+      height: auto;
+    }
+    textarea,
+    table,
+    td,
+    th,
+    code,
+    pre,
+    samp {
+      -webkit-hyphens: auto; /* césure propre */
+      -moz-hyphens: auto;
+      hyphens: auto;
+      word-wrap: break-word; /* passage à la ligne forcé */
+    }
+input {
+  margin-top:60%;
+  margin-left:30%;
+  margin-right:30%;
+
+
+
+}
     canvas {
       position: absolute;
       top: 0;
